--- a/rro_overlays/SettingsOverlayPhoenix/AndroidManifest.xml
+++ b/rro_overlays/SettingsOverlayPhoenix/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.arrow.settings.overlay.phoenix">
+    package="com.xiaomi.settings.overlay.phoenix">
     <application android:hasCode="false" />
     <overlay
       android:targetPackage="com.android.settings"
