--- a/rro_overlays/TelephonyProviderOverlayPhoenix/AndroidManifest.xml
+++ b/rro_overlays/TelephonyProviderOverlayPhoenix/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.arrow.telephonyprovider.overlay.phoenix">
+    package="com.xiaomi.telephonyprovider.overlay.phoenix">
 
     <application android:hasCode="false" />
     <overlay
