--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -31,6 +31,8 @@ import /vendor/etc/init/init.mi_thermald.rc
 on early-init
     write /proc/sys/kernel/sched_boost 1
     symlink /data/tombstones /tombstones
+    # Disable EAS
+    write /proc/sys/kernel/sched_energy_aware 0
 
 on init
     write /dev/stune/foreground/schedtune.sched_boost_no_override 1
@@ -46,6 +48,10 @@ on init
 
 on early-fs
     start vold
+
+    # report max frequency to unity tasks.
+    write /proc/sys/kernel/sched_lib_name "UnityMain,libunity.so"
+    write /proc/sys/kernel/sched_lib_mask_force 255
 
 on fs
     mount_all --early
@@ -156,6 +162,13 @@ on boot
 # access permissions for FPC service
     chown system system /sys/bus/platform/devices/soc/soc:fpc1020/irq
     chown system system /sys/bus/platform/devices/soc/soc:fpc1020/wakeup_enable
+
+    # Enable EAS
+    write /proc/sys/kernel/sched_energy_aware 1
+
+    # Enable idle state listener
+    write /sys/class/drm/card0/device/idle_encoder_mask 1
+    write /sys/class/drm/card0/device/idle_timeout_ms 100
 
 service vendor.pd_mapper /vendor/bin/pd-mapper
     class core
