--- a/power-libperfmgr/android.hardware.power-service.xiaomi-libperfmgr.rc
+++ b/power-libperfmgr/android.hardware.power-service.xiaomi-libperfmgr.rc
@@ -1,4 +1,4 @@
-service vendor.power-hal-aidl /vendor/bin/hw/android.hardware.power-service.phoenix-libperfmgr
+service vendor.power-hal-aidl /vendor/bin/hw/android.hardware.power-service.xiaomi-libperfmgr
     class hal
     user root
     group system
